[package]
name = "dns-query-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
mockall = "0.13.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tempfile = "3.17.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
trust-dns-proto = "0.23.2"
warp = "0.3.7"
